--- a/Standalone/Steamworks.NET.nuspec
+++ b/Standalone/Steamworks.NET.nuspec
@@ -1,19 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
 	<metadata>
-		<id>Steamworks.NET</id>
+		<id>YellowDogMan.Steamworks.NET</id>
 		<version>15.0.1</version>
 		<description>Steamworks.NET</description>
 		<authors>rileylabrecque</authors>
 		<license type="expression">MIT</license>
-		<projectUrl>https://github.com/rlabrecque/Steamworks.NET</projectUrl>
-		<repository type="git" url="https://github.com/rlabrecque/Steamworks.NET.git" commit="15.0.1"/>
+		<projectUrl>https://github.com/Yellow-Dog-Man/Steamworks.NET</projectUrl>
+		<repository type="git" url="https://github.com/Yellow-Dog-Man/Steamworks.NET.git" commit="15.0.1"/>
 		<dependencies>
 			<group targetFramework="netstandard2.1">
+			</group>
+			<group targetFramework="net462">
 			</group>
 		</dependencies>
 		<references>
 			<group targetFramework="netstandard2.1">
+				<reference file="Steamworks.NET.dll"/>
+			</group>
+			<group targetFramework="net462">
 				<reference file="Steamworks.NET.dll"/>
 			</group>
 		</references>
@@ -21,7 +26,10 @@
 	<files>
 		<file src="..\readme.md" target="readme.md"/>
 		<file src="bin\nuget\runtime\" target="runtimes"/>
-		<file src="bin\ref\*.dll" target="ref\netstandard2.1\"/>
-		<file src="bin\ref\*.dll" target="lib\netstandard2.1\"/>
+		<file src="bin\ref\netstandard2.1\*.dll" target="ref\netstandard2.1\"/>
+		<file src="bin\ref\netstandard2.1\*.dll" target="lib\netstandard2.1\"/>
+
+		<file src="bin\ref\net462\*.dll" target="ref\net462\"/>
+		<file src="bin\ref\net462\*.dll" target="lib\net462\"/>
 	</files>
 </package>
